cmake_minimum_required(VERSION 3.16)

project(qt_tetroidnes VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(EXECUTABLE_NAME qt_tetroidnes)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(REQUIRED_COMPONENTS Widgets Core Gui LinguistTools)

find_package(Qt6 REQUIRED COMPONENTS
    ${REQUIRED_COMPONENTS}
)

set(PROJECT_SOURCES
    main.cpp
)

qt_add_executable(${EXECUTABLE_NAME}
    MANUAL_FINALIZATION
    ${PROJECT_SOURCES}
    main.cpp mainwindow.cpp mainwindow.h mainwindow.ui menubar.cpp menubar.h resources.qrc
)

qt_add_translations(${EXECUTABLE_NAME} TS_FILES tetroidnes_en_US.ts)

if(ANDROID)
    set_property(TARGET ${EXECUTABLE_NAME} APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
        ${CMAKE_CURRENT_SOURCE_DIR}/android)
endif()

target_link_libraries(${EXECUTABLE_NAME} PRIVATE Qt6::Widgets)
target_link_libraries(${EXECUTABLE_NAME} PRIVATE Qt6::Core)
target_link_libraries(${EXECUTABLE_NAME} PRIVATE Qt6::Gui)

set_target_properties(${EXECUTABLE_NAME} PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS ${EXECUTABLE_NAME}
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
install(CODE
    file(GET_RUNTIME_DEPENDENCIES DIRECTORY ${REQUIRED_COMPONENTS})
)
qt_finalize_executable(${EXECUTABLE_NAME})